[metadata]
name = common-module
version = 0.1
description = A Django app to conduct GRC common info.
long_description = file: README.rst
author = Mishunin Boris
author_email = borys.mishunin@neptuness.com
license = MIT # Example license
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.1  # Replace "X.Y" as appropriate
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
[options.packages.find]
exclude = common_module